tests/bad/value_enums/invalid_match_expr.oc
/// fail: Expected value enum variant, got IntLiteral

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case1("hello", 42)
    match foo {
        Case0(x) | Case1(_, x) => println(`0|1 => {x}`)
        1234(y) => println(`2 => {y}`)
        else => {}
    }
}